--- a/index.html
+++ b/index.html
@@ -3,67 +3,194 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>RiyanZx Store - Produk & Pembayaran</title>
+<title>RiyanZx Store</title>
 <style>
-  body {margin:0;font-family:sans-serif;background:#f4f9fd;color:#333;}
-  .header {background:linear-gradient(90deg,#00c6ff,#0072ff);color:#fff;padding:1rem;text-align:center;}
-  .contact-buttons a {display:inline-block;margin:0.4rem;padding:0.6rem 1rem;background:#0072ff;color:#fff;text-decoration:none;border-radius:0.4rem;}
-  .product {background:#fff;border:1px solid #ddd;border-radius:0.5rem;padding:1rem;margin:1rem auto;max-width:400px;}
-  .product .buy-buttons button {margin:0.3rem;}
-  button {padding:0.6rem 1.2rem;background:#0072ff;color:#fff;border:none;border-radius:0.4rem;font-weight:bold;cursor:pointer;}
-  button:hover {background:#005dc0;}
-  input {width:90%;max-width:300px;padding:0.5rem;margin:0.5rem auto;display:block;border:1px solid #ccc;border-radius:0.4rem;}
-  .payment-method {background:#fff;border:1px solid #ddd;border-radius:0.5rem;padding:1rem;margin:1rem auto;max-width:400px;text-align:center;}
-  .payment-method img {width:150px;margin-top:0.5rem;}
+  body {margin:0;font-family:'Segoe UI', Tahoma, sans-serif;background:#f4f9fd;color:#333;}
+  header {background:#0072ff;color:#fff;padding:1rem;text-align:center;}
+  .container {max-width:600px;margin:auto;padding:1rem;display:none;}
+  .product, .payment {background:#fff;border:1px solid #ddd;border-radius:0.5rem;padding:1rem;margin:1rem 0;}
+  .contact-buttons {display:flex;flex-wrap:wrap;gap:0.5rem;}
+  .contact-buttons a {flex:1;text-decoration:none;}
+  .contact-buttons button {width:100%;background:#0072ff;color:#fff;border:none;padding:0.6rem;border-radius:0.4rem;cursor:pointer;font-weight:bold;}
+  .contact-buttons button:hover {background:#005dc0;}
+  .admin-btn {position:fixed;top:1rem;left:1rem;background:#fff;border:1px solid #ccc;padding:0.5rem 1rem;border-radius:2rem;cursor:pointer;font-weight:bold;box-shadow:0 0 5px rgba(0,0,0,0.2);}
+  .modal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;z-index:999;}
+  .modal-content {background:#fff;padding:1.5rem;border-radius:0.7rem;width:90%;max-width:400px;box-shadow:0 0 10px rgba(0,0,0,0.3);}
+  .modal-content h3 {margin-top:0;}
+  .modal-content label {display:block;margin-top:0.8rem;font-weight:bold;}
+  .modal-content input {width:100%;margin-top:0.3rem;padding:0.6rem;border:1px solid #ccc;border-radius:0.4rem;}
+  .modal-content button {width:100%;margin-top:1rem;background:#0072ff;color:#fff;border:none;padding:0.7rem;border-radius:0.4rem;font-weight:bold;cursor:pointer;}
+  .modal-content button:hover {background:#005dc0;}
+  .error {color:red;margin-top:0.5rem;font-size:0.9rem;}
+  .loading {position:fixed;top:0;left:0;width:100%;height:100%;background:#fff;display:flex;justify-content:center;align-items:center;z-index:9999;flex-direction:column;}
+  .loading img {width:80px;height:80px;border-radius:50%;animation:spin 2s linear infinite;}
+  @keyframes spin {0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+  .loading p {margin-top:1rem;color:#333;font-weight:bold;}
 </style>
 </head>
 <body>
 
-<div class="header">
+<div class="loading" id="loadingScreen">
+  <img src="https://files.catbox.moe/1fodlk.jpg" alt="Loading">
+  <p>Memuat...</p>
+</div>
+
+<header>
   <h1>RiyanZx Store</h1>
-  <p>Website jual beli digital</p>
-  <div class="contact-buttons">
-    <a href="https://wa.me/6285793901218?text=Halo%20kak%20saya%20mau%20beli" target="_blank">Chat WhatsApp</a>
-    <a href="https://t.me/RiyanZxDev" target="_blank">Telegram</a>
-    <a href="https://whatsapp.com/channel/0029Vb61aq91HspunomeKm2j" target="_blank">Saluran WA</a>
+  <p>Jual beli digital murah & terpercaya</p>
+</header>
+
+<button class="admin-btn" onclick="openLogin()">
+  <img src="https://files.catbox.moe/1fodlk.jpg" alt="Admin" style="width:24px;height:24px;border-radius:50%;vertical-align:middle;">
+</button>
+
+<div class="container" id="mainContent">
+  <section id="productsSection">
+    <h2>Produk</h2>
+    <div id="productList"></div>
+  </section>
+
+  <section class="payment">
+    <h2>Metode Pembayaran</h2>
+    <ul id="paymentList"></ul>
+  </section>
+
+  <section>
+    <h2>Kontak Admin</h2>
+    <div class="contact-buttons">
+      <a href="https://wa.me/6285793901218" target="_blank"><button>WhatsApp Testimoni</button></a>
+      <a href="https://t.me/RiyanZxDev" target="_blank"><button>Telegram</button></a>
+      <a href="https://whatsapp.com/channel/0029Vb61aq91HspunomeKm2j" target="_blank"><button>Saluran WhatsApp</button></a>
+    </div>
+  </section>
+</div>
+
+<!-- Modal Login -->
+<div class="modal" id="loginModal">
+  <div class="modal-content">
+    <h3>Login Admin</h3>
+    <input type="password" id="adminPass" placeholder="Masukkan Password">
+    <div id="errorMsg" class="error"></div>
+    <button onclick="checkLogin()">Login</button>
+    <button style="background:#ccc;color:#333;" onclick="closeLogin()">Batal</button>
   </div>
 </div>
 
-<h2 style="text-align:center;margin-top:1rem;">Produk Kami</h2>
-<div class="product">
-  <h3>Panel Unli 5K</h3>
-  <p>Panel unlimited murah meriah 🔥</p>
-  <p><b>Harga:</b> Rp5.000</p>
-  <div class="buy-buttons">
-    <button onclick="buyViaWA('Panel Unli 5K')">Beli via WhatsApp</button>
-    <button onclick="buyViaTelegram('Panel Unli 5K')">Beli via Telegram</button>
+<!-- Modal Admin Panel -->
+<div class="modal" id="adminModal">
+  <div class="modal-content">
+    <h3>Admin Panel</h3>
+    <input type="text" id="newProduct" placeholder="Nama Produk">
+    <input type="text" id="newPrice" placeholder="Harga">
+    <button onclick="addProduct()">Tambah Produk</button>
+    <hr>
+    <h3>Update Metode Pembayaran</h3>
+    <label for="dana">Dana</label>
+    <input type="text" id="dana">
+    <label for="ovo">OVO</label>
+    <input type="text" id="ovo">
+    <label for="gopay">GoPay</label>
+    <input type="text" id="gopay">
+    <label for="qris">QRIS (Link Gambar)</label>
+    <input type="text" id="qris">
+    <button onclick="updatePayments()">Simpan Pembayaran</button>
+    <button style="background:#ccc;color:#333;" onclick="closeAdmin()">Tutup Panel</button>
   </div>
-</div>
-<div class="product">
-  <h3>Script Kayzen V5</h3>
-  <p>Script bot WhatsApp premium</p>
-  <p><b>Harga:</b> Rp15.000</p>
-  <div class="buy-buttons">
-    <button onclick="buyViaWA('Script Kayzen V5')">Beli via WhatsApp</button>
-    <button onclick="buyViaTelegram('Script Kayzen V5')">Beli via Telegram</button>
-  </div>
-</div>
-
-<h2 style="text-align:center;margin-top:2rem;">Informasi Pembayaran</h2>
-<div class="payment-method">
-  <p><b>Dana:</b> 0857-9390-1218</p>
-  <p><b>GoPay:</b> 0857-9390-1218</p>
-  <p><b>OVO:</b> 0857-9390-1218</p>
-  <p><b>QRIS:</b></p>
-  <img src="https://files.catbox.moe/1fodlk.jpg" alt="QRIS">
 </div>
 
 <script>
-function buyViaWA(product){
-  window.open(`https://wa.me/6285793901218?text=Halo%20kak%2C%20mau%20beli%20*${encodeURIComponent(product)}*`,'_blank');
+window.onload = () => {
+  setTimeout(() => {
+    document.getElementById('loadingScreen').style.display = 'none';
+    document.getElementById('mainContent').style.display = 'block';
+  }, 1500);
+};
+
+const products = [
+  {name:"Panel Unli 5K", price:"Rp5.000"},
+  {name:"Script Kayzen V5", price:"Rp15.000"}
+];
+let payments = {
+  dana: "0857-9390-1218",
+  ovo: "0857-9390-1218",
+  gopay: "0857-9390-1218",
+  qris: "https://files.catbox.moe/1fodlk.jpg"
+};
+const adminPass = "Killua";
+
+function renderProducts(){
+  const list = document.getElementById("productList");
+  list.innerHTML = "";
+  products.forEach((p, i) => {
+    list.innerHTML += `
+      <div class="product">
+        <h3>${p.name}</h3>
+        <p><b>Harga:</b> ${p.price}</p>
+        <button onclick="deleteProduct(${i})">Hapus</button>
+      </div>`;
+  });
 }
-function buyViaTelegram(product){
-  window.open('https://t.me/RiyanZxDev','_blank');
+
+function renderPayments(){
+  const list = document.getElementById("paymentList");
+  list.innerHTML = `
+    <li><b>Dana:</b> ${payments.dana}</li>
+    <li><b>OVO:</b> ${payments.ovo}</li>
+    <li><b>GoPay:</b> ${payments.gopay}</li>
+    <li><b>QRIS:</b><br><img src="${payments.qris}" alt="QRIS" style="width:120px;"></li>`;
+}
+
+renderProducts();
+renderPayments();
+
+function openLogin(){document.getElementById("loginModal").style.display="flex";document.getElementById("errorMsg").innerText="";}
+function closeLogin(){document.getElementById("loginModal").style.display="none";}
+function openAdmin(){
+  document.getElementById("adminModal").style.display="flex";
+  document.getElementById("dana").value = payments.dana;
+  document.getElementById("ovo").value = payments.ovo;
+  document.getElementById("gopay").value = payments.gopay;
+  document.getElementById("qris").value = payments.qris;
+}
+function closeAdmin(){document.getElementById("adminModal").style.display="none";}
+
+function checkLogin(){
+  const pass = document.getElementById("adminPass").value;
+  if(pass === adminPass){
+    closeLogin();
+    openAdmin();
+  } else {
+    document.getElementById("errorMsg").innerText = "❌ Password salah. Coba lagi.";
+  }
+}
+
+function addProduct(){
+  const name = document.getElementById("newProduct").value.trim();
+  const price = document.getElementById("newPrice").value.trim();
+  if(name && price){
+    products.push({name, price});
+    renderProducts();
+    document.getElementById("newProduct").value="";
+    document.getElementById("newPrice").value="";
+  } else {
+    alert("Lengkapi semua field produk!");
+  }
+}
+
+function deleteProduct(i){
+  if(confirm("Hapus produk ini?")){
+    products.splice(i, 1);
+    renderProducts();
+  }
+}
+
+function updatePayments(){
+  payments.dana = document.getElementById("dana").value.trim();
+  payments.ovo = document.getElementById("ovo").value.trim();
+  payments.gopay = document.getElementById("gopay").value.trim();
+  payments.qris = document.getElementById("qris").value.trim();
+  renderPayments();
+  alert("✅ Metode pembayaran diperbarui!");
 }
 </script>
 </body>
